Changelog
=========

Be sure version number is updated in deploy/alpine/APKBUILD.

Unreleased
----------

0.11.4 (2023-05-31)
-------------------

Fixed several bugs in the trivia reservation plugin.
Added reaction capabilities to the CLI backend.
Changed trivia reservation configuration (see commit log).

0.11.0-3 (2023-05-31)
---------------------

Add trivia reservation plugin.
New ability to respond to Signal reactions.

0.10.1,2 (2022-11-15)
---------------------

Update buttcoin to include Tether, and better notification behavior.

0.10.0 (2022-11-14)
-------------------

Added buttcoin plugin.

0.9.1 (2022-10-31)
------------------

Updated github deploy token. No code change.

0.9.0 (2022-10-31)
------------------

- HTTP server is added.
  - Help is delivered as a link to a webpage.
  - Plugins may register for HTTP events.
- Birthdays can be viewed as web page
- [deploy] Removed unnecessary kill statement in run.sh

0.8.0 (2022-05-30)
----------------------

- deploy: get rid of signald from the docker image
- refresh Github deploy keys

0.7.4 (2022-02-28)
------------------

- Signal: Allow using "@cbot" (but not as a real tagged mention) as an alias for
  the bot.
- Signal: Fix grotesque logging situation
- Global: Allow to DM the bot without using its name, to trigger commands
- plugin/birthday: code cleanups, use built-in logging framework
- plugin/{sql,}karma: use ratelimited sending
- Docker: set timezone


0.7.3 (2022-02-19)
------------------

Signal: Fix bug in queued message handling which sometimes resulted in
double-free.

0.7.{1,2} (2022-02-19)
----------------------

Packaging changes to allow core dumps, and debuginfo.

0.7.0 (2022-02-18)
------------------

New Plugin, birthday!
- Tracks birthdays stored in database
- Every day at configurable time, sends happy birthday messages for relevant
  people
- Sends a monthly overview message
- Allows management by me

Signal backend is improved so that waiting for a response from signald does not